--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,15 +10,14 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
-        {% block css %}
         <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        {% block css %}
         {% endblock css %}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg fixed-top">
             <a class="navbar-brand">Brand</a>
             <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
             </button>
             <div id="my-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
@@ -42,6 +41,25 @@
             {% for i in '0123456789' %}
                 <span>{{ i|add:1 }}</span>
             {% endfor %}
+        </div>
+        <i class="fas fa-search" data-toggle="modal" data-target="#search"></i>
+        <div class="modal fade" id="search" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                          <label for="movie-search">Search the database</label>
+                          <input type="text" class="form-control" name="movie" id="movie-search" placeholder="Search for a movie name">
+                          <div id="search-options"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container-fluid">
             <div class="row movies">
@@ -83,6 +101,7 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/active.js' %}"></script>
         {% block js %}
+        <script src="https://kit.fontawesome.com/08d8f6996a.js"></script>
         <script src="{% static 'js/home.js' %}"></script>
         {% endblock js %}
     </body>
