--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% load static %}
-
+{% block title %}Login{% endblock title %}
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
 {% endblock css %}
