--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,8 @@
 {% extends 'index.html' %}
 {% load static %}
 
+{% block title %}Register{% endblock title %}
+
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
 {% endblock css %}
